[tool.poetry]
name = "traffic_qtgui"
homepage = "https://github.com/traffic_viz/traffic_qtgui"
version = "1.1"
description = "A plugin for a traffic Qt GUI"
authors = ["Xavier Olive <git@xoolive.org>"]
license = "MIT"
readme = "readme.rst"
include = [
  "*.svg"
]

[tool.poetry.plugins."traffic.console"]
gui = "traffic_qtgui.console"
install = "traffic_qtgui.app"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
traffic = "^2.6.4"
PyQt5 = "^5.15.4"
pyOpenSSL = "^20.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
isort = "^5.9.3"
black = "^21.8b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target_version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    __pycache__
  | \.git
  | \.mypy_cache
  | \.ipynb_checkpoints
  | build
  | dist
)/
'''

[tool.isort]
line_length = 80
profile = "black"
known_first_party = ["numpy", "pandas", "pyproj", "shapely"]

[tool.mypy]
python_version = 3.7
platform = "posix"

check_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
